[project]
name = "atcoder-oj-env"
version = "0.1.0"
description = "uv-based Python environment for competitive programming"
requires-python = ">=3.13"
dependencies = [
    "numpy==2.3.2",
    "online-judge-tools==11.5.1",
    "pandas==2.3.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.4",
    "setuptools>=82.0.1",
    "sortedcontainers==2.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"